<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:backgroundTint="@color/white"
    tools:context=".SignUpActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <TextView
            android:id="@+id/welcomeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/baloo"
            android:text="Welcome to MuvkinTours"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@id/fill"
            app:layout_constraintHorizontal_bias=".1"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/fill"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="Please Fill in your detatils for proper meal delivery"
            app:layout_constraintTop_toBottomOf="@id/welcomeText"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toTopOf="@id/animation_view"
            app:layout_constraintHorizontal_bias=".3"/>

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/animation_view"
            android:layout_width="198dp"
            android:layout_height="116dp"
            app:layout_constraintVertical_chainStyle="packed"
            app:layout_constraintBottom_toTopOf="@id/userName"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/fill"
            app:shapeAppearanceOverlay="@style/radii"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/circle" />



        <com.google.android.material.textfield.TextInputLayout

            android:id="@+id/userName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="10dp"
            app:startIconDrawable="@drawable/person"
            app:boxBackgroundColor="@color/white"
            app:layout_constraintTop_toBottomOf="@+id/fill"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/userPhone"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Enter you full name"/>


        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            app:boxBackgroundColor="@color/white"
            android:id="@+id/userPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="10dp"
            app:startIconDrawable="@drawable/phone"
            app:layout_constraintTop_toBottomOf="@+id/userName"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/userTicket"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Enter you mobile Number"
                android:inputType="number"/>


        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/userTicket"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="10dp"
            app:boxBackgroundColor="@color/white"
            app:startIconDrawable="@drawable/mail"
            app:layout_constraintTop_toBottomOf="@+id/userPhone"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/userSeat"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Enter your Email Address"/>


        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/userSeat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="10dp"
            app:boxBackgroundColor="@color/white"
            app:passwordToggleEnabled="true"
            app:layout_constraintTop_toBottomOf="@+id/userTicket"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/userCoach"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Enter your password"
                android:inputType="textPassword"/>


        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/userCoach"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="10dp"
            app:boxBackgroundColor="@color/white"
            app:passwordToggleEnabled="true"
            app:layout_constraintTop_toBottomOf="@+id/userSeat"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/btnSubmit"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Confirm your password"
                android:inputType="textPassword"/>


        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSubmit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="24dp"
            android:text="Submit"
            app:layout_constraintTop_toBottomOf="@id/userCoach"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>